# datalabs

./: .dockerignore  .env.prod  .env.prod.db  .env.prod.pgadmin  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
core/: settings.py  urls.py  views.py
core/settings/: base.py  local.py  production.py
dataset/: admin.py  forms.py  models.py  urls.py  views.py
dataset/management/commands/: populate_datasets.py
dataset/migrations/: 0001_initial.py
nginx/: nginx.conf
templates/: base.html  home.html
templates/account/: login.html
templates/dataset/: dataset_detail.html  dataset_form.html  dataset_list.html
theme/static_src/: tailwind.config.js
