[tool.poetry]
name = "datalabs"
version = "0.1.0"
description = ""
authors = ["Sebastian Marines"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.2"
django-allauth = {extras = ["socialaccount"], version = "^65.1.0"}
python-dotenv = "^1.0.1"
django-tailwind = {extras = ["reload"], version = "^3.8.0"}
gunicorn = "^23.0.0"
dj-database-url = "^2.3.0"
psycopg2-binary = "^2.9.10"
whitenoise = "^6.7.0"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
